2014-12-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/call-ec.c (ecc_compute_public): Rename, as we share
	same routine among ECDSA and ECDH.
	(ecdh_decrypt): New.

2014-12-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/ecc.c (compute_kP): Bug fix.  It's P, not G.
	(point_is_on_the_curve): Bug fix.

2014-12-03  Niibe Yutaka  <gniibe@fsij.org>

	Changes for RSA-4096.

	* src/gnuk.h (MAX_CMD_APDU_DATA_SIZE, MAX_RES_APDU_DATA_SIZE):
	Send/Recv buffer should be bigger.
	* polarssl/library/bignum.c (mpi_exp_mod): Don't consume much.
	* polarssl/library/rsa.c (rsa_rsaes_pkcs1_v15_decrypt): buffer
	allocation size should be variable.

2014-12-01  Niibe Yutaka  <gniibe@fsij.org>

	* src/Makefile.in (DEFS): Don't define compile time preference of
	key algo attributes.

	* src/openpgp-do.c (proc_key_import): Support modifiable key algo
	attributes.

2014-11-21  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (ALGO_RSA4K, ALGO_NISTP256R1, ALGO_SECP256K1)
	(ALGO_ED25519, ALGO_RSA2K): New.
	(struct key_data_internal): Move to ...
	* src/openpgp-do.c (struct key_data_internal): ... here.
	(CHECKSUM_ADDR, kdi_len): New.
	(CKDC_CALC, CKDC_CHECK): New.
	(compute_key_data_checksum): Add arg PRVKEY_LEN.
	(gpg_do_load_prvkey, gpg_do_delete_prvkey): Support modifiable key
	algo attributes.
	(gpg_do_write_prvkey, gpg_do_public_key, gpg_do_keygen): Likewise.
	(gpg_do_clear_prvkey): Use MAX_PRVKEY_LEN.

	* src/openpgp.c (gpg_init): Call flash_init_keys after
	gpg_data_scan.
	(cmd_pso): Support modifiable key algo attributes.
	(cmd_internal_authenticate): Likewise.

2014-11-21  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (algorithm_attr_rsa2k): Rename from *_rsa.
	(algorithm_attr_rsa4k): New.
	(get_algo_attr_pointer, kk_to_nr, gpg_get_algo_attr)
	(get_algo_attr_data_object, gpg_get_algo_attr_key_size): New.
	(rw_algorithm_attr): New.
	(gpg_do_table): Register rw_algorithm_attr for GPG_DO_ALG_*.
	(gpg_data_scan, gpg_data_copy): Handle algo attributes.
